--- a/config.json
+++ b/config.json
@@ -15,14 +15,13 @@
       "default_search_engine": "google",
       "name": "Jarvis",
       "voice": {
-        "english_voice": "HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Speech\\Voices\\Tokens\\TTS_MS_EN-US_ZIRA_11.0",
+        "english_voice": "HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Speech\\Voices\\Tokens\\TTS_MS_EN-US_DAVID_11.0",
         "indonesian_voice": "HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Speech\\Voices\\Tokens\\TTS_MS_ID-ID_ANDIKA_11.0",
         "rate": 175,
-        "volume": 1.0
+        "volume": 1.0,
+        "gender": "male"
       }
     }
   },
   "name": "Jarvis"
   }
-
-
